More changes after comments